--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <img src="./assets/images/backgroundimg.jpg" alt="">
             </div>
             <div class="banner">    
-                <h1 class="title-style">Exemplo Titulo </h1>  
-                <p>Exemplo Nome</p>
+                <h1 class="title-style">Sérgio Ferraz </h1>  
+                <p>Estudante de Ciencia da Computação e Dev.Java Full Stack</p>
                 <button class="ButtonCustom" id="button-banner">Saiba mais</button>
             </div> 
 
@@ -69,8 +69,8 @@
           <!-- Lista de tecnologias com ícones e descrições -->
                 <div class="conhecimento" data-anime="left">
                     <div class="conhecimento-header">
-                        <i class="fab fa-html5"></i>
-                        <h3>HTML</h3>
+                        <i class="fa-brands fa-java"></i>
+                         <h3>Java</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Exemplo da tecnologia.</p>
@@ -79,8 +79,8 @@
                 <!-- Repetir para outras tecnologias -->
                 <div class="conhecimento" data-anime="right">
                     <div class="conhecimento-header">
-                        <i class="fab fa-css3-alt"></i>
-                        <h3>Css</h3>
+                        <i class="fa-brands fa-angular"></i>
+                        <h3>Angular</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Exemplo da tecnologia</p>
@@ -97,8 +97,8 @@
                 </div>
                 <div class="conhecimento" data-anime="right">
                     <div class="conhecimento-header">
-                        <i class="fab fa-react"></i>
-                        <h3>ReactJS</h3>
+                        <i class="fa-brands fa-html5"></i>
+                      <h3>HTML</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Exemplo da tecnologia</p>
@@ -156,7 +156,7 @@
                     <div class="background">
                         <div class="card-info">
                             <h2>projeto2</h2>
-                            <h3>HTML, CSS</h3>
+                            <h3>JAVA, Angular</h3>
                             <P>Resumo projeto. </P>
                             <button class="ButtonSend">Saiba mais</button>
                         </div>
@@ -169,7 +169,7 @@
                     <div class="background">
                         <div class="card-info">
                             <h2>projeto3</h2>
-                            <h3>HTML, CSS</h3>
+                            <h3>Python</h3>
                             <P>Resumo projeto </P>
                             <button class="ButtonSend">Saiba mais</button>
                         </div>
@@ -182,7 +182,7 @@
                     <div class="background">
                         <div class="card-info">
                             <h2>projeto4</h2>
-                            <h3>HTML, CSS</h3>
+                            <h3>JAVA,JavaScript</h3>
                             <P>Resumo projeto. </P>
                             <button class="ButtonSend">Saiba mais</button>
                         </div>
@@ -232,7 +232,7 @@
                     <div class="qtde-page" data-anime="right" >
                         <label for="qtde">Quantidade de páginas:</label> 
                         <input type="number" name="qtde" id="qtde" min="1" max="100"> <br/><br/>
-                        <label for="js">Preciso de um script JS:</label>
+                        <label for="js">Preciso de um software Full Stack:</label>
                         <input class="check" checked="" type="checkbox" name="js" id="js"> <br/><br/><br/> 
                     </div>
                     
